--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .DS_Store
 node_modules
+yarn-error.log
+
+config/**/*.yml
+!config/**/default.yml
+
+static/assets/js/**/*.js
+static/assets/css/**/*.css
