--- a/package.json
+++ b/package.json
@@ -2,28 +2,38 @@
   "name": "@twi-project/web-client",
   "author": "Nick K.",
   "version": "0.1.0",
+  "license": "MIT",
+  "scripts": {
+    "make": "NODE_ENV=production node_modules/.bin/webpack --config build"
+  },
   "devDependencies": {
-    "@octetstream/eslint-config": "1.0.1",
-    "apollo-client": "1.9.0-0",
-    "ava": "0.21.0",
-    "babel-loader": "7.1.1",
+    "@octetstream/eslint-config": "2.0.2",
+    "@octetstream/promisify": "1.0.3",
+    "apollo-client": "1.9.2",
+    "ava": "0.22.0",
+    "babel-loader": "7.1.2",
     "babel-plugin-module-resolver": "2.7.1",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-babili": "0.1.4",
     "babel-preset-react": "6.24.1",
-    "eslint": "3.19.x",
-    "eslint-plugin-ava": "4.2.1",
+    "css-loader": "0.28.7",
+    "eslint": "4.6.1",
+    "eslint-plugin-ava": "4.2.2",
     "graphql-tag": "2.4.2",
     "husky": "0.14.3",
-    "lodash": "^4.17.4",
-    "mobx": "3.2.1",
-    "mobx-react": "4.2.2",
+    "jest": "21.0.2",
+    "lodash": "4.17.4",
     "object-path": "0.11.4",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-router": "4.1.2",
-    "webpack": "3.3.0",
+    "postcss": "6.0.11",
+    "preact": "8.2.5",
+    "preact-compat": "3.17.0",
+    "react-router": "4.2.0",
+    "redux": "3.7.2",
+    "style-loader": "0.18.2",
+    "webpack": "3.5.6",
+    "webpack-dev-server": "2.7.1",
     "whatwg-fetch": "2.0.3"
   }
 }
