--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "make": "NODE_ENV=production node_modules/.bin/webpack --config build"
+    "make": "NODE_ENV=production node_modules/.bin/webpack --config build",
+    "watch": "NODE_ENV=development node_modules/.bin/webpack --watch --config build",
+    "m": "yarn make",
+    "w": "yarn watch",
+    "lint": "node_modules/.bin/eslint build src"
   },
   "devDependencies": {
     "@octetstream/eslint-config": "2.0.2",
