--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "@octetstream/eslint-config": "2.0.2",
+    "@octetstream/invariant": "1.0.2",
     "@octetstream/promisify": "1.0.3",
     "apollo-client": "1.9.2",
     "ava": "0.22.0",
+    "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-module-resolver": "2.7.1",
     "babel-plugin-transform-async-to-generator": "6.24.1",
@@ -25,6 +27,7 @@
     "css-loader": "0.28.7",
     "eslint": "4.6.1",
     "eslint-plugin-ava": "4.2.2",
+    "graphql": "0.11.3",
     "graphql-tag": "2.4.2",
     "husky": "0.14.3",
     "jest": "21.0.2",
@@ -36,6 +39,7 @@
     "react-router": "4.2.0",
     "redux": "3.7.2",
     "style-loader": "0.18.2",
+    "stylelint": "8.1.1",
     "webpack": "3.5.6",
     "webpack-dev-server": "2.7.1",
     "whatwg-fetch": "2.0.3"
