Add eslint config. Add a draft of Application container component.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,20 @@
 {
   "plugins": [
-    "ava"
+    "react"
   ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "modules": true,
+      "jsx": true
+    }
+  },
+  "settings": {
+    "react": {
+      "pragma": "h"
+    }
+  },
   "extends": [
-    "@octetstream",
-    "plugin:ava/recommended"
-  ],
-  "rules": {
-    "ava/no-ignored-test-files": ["error", {
-      "files": [
-        "src/test/unit/**/*.{js,jsx}"
-      ]
-    }]
-  }
+    "airbnb",
+    "@octetstream"
+  ]
 }
