--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-babili": "0.1.4",
     "babel-preset-preact": "1.1.0",
+    "babili-webpack-plugin": "^0.1.2",
     "css-loader": "0.28.7",
     "eslint": "4.6.1",
     "eslint-config-airbnb": "^15.1.0",
