--- a/package.json
+++ b/package.json
@@ -32,19 +32,23 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "graphql": "0.11.3",
     "graphql-tag": "2.4.2",
     "husky": "0.14.3",
     "jest": "21.0.2",
     "lodash": "4.17.4",
+    "normalize.css": "^7.0.0",
     "object-path": "0.11.4",
     "postcss": "6.0.11",
+    "postcss-loader": "^2.0.6",
     "preact": "8.2.5",
     "preact-compat": "3.17.0",
     "react-router": "4.2.0",
     "redux": "3.7.2",
     "style-loader": "0.18.2",
     "stylelint": "8.1.1",
+    "sugarss": "^1.0.0",
     "webpack": "3.5.6",
     "webpack-dev-server": "2.7.1",
     "whatwg-fetch": "2.0.3"
