--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "favicons-webpack-plugin": "^0.0.7",
     "graphql": "0.11.3",
     "graphql-tag": "2.4.2",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.30.1",
     "husky": "0.14.3",
     "jest": "21.0.2",
     "lodash": "4.17.4",
