Add minimal HMR support

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "make": "NODE_ENV=production node_modules/.bin/webpack --config build",
-    "watch": "NODE_ENV=development node_modules/.bin/webpack --watch --config build",
+    "watch": "NODE_ENV=development node_modules/.bin/webpack-dev-server --config build",
     "m": "yarn make",
     "w": "yarn watch",
     "lint": "node_modules/.bin/eslint build src"
@@ -24,34 +24,35 @@
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-babili": "0.1.4",
     "babel-preset-preact": "1.1.0",
-    "babili-webpack-plugin": "^0.1.2",
+    "babili-webpack-plugin": "0.1.2",
     "css-loader": "0.28.7",
     "eslint": "4.6.1",
-    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-airbnb": "15.1.0",
     "eslint-plugin-ava": "4.2.2",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "favicons-webpack-plugin": "^0.0.7",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.3.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "favicons-webpack-plugin": "0.0.7",
     "graphql": "0.11.3",
     "graphql-tag": "2.4.2",
-    "html-webpack-harddisk-plugin": "^0.1.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-harddisk-plugin": "0.1.0",
+    "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
     "jest": "21.0.2",
     "lodash": "4.17.4",
-    "normalize.css": "^7.0.0",
+    "normalize.css": "7.0.0",
     "object-path": "0.11.4",
     "postcss": "6.0.11",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "2.0.6",
     "preact": "8.2.5",
     "preact-compat": "3.17.0",
+    "react-hot-loader": "1.3.1",
     "react-router": "4.2.0",
     "redux": "3.7.2",
     "style-loader": "0.18.2",
     "stylelint": "8.1.1",
-    "sugarss": "^1.0.0",
+    "sugarss": "1.0.0",
     "webpack": "3.5.6",
     "webpack-dev-server": "2.7.1",
     "whatwg-fetch": "2.0.3"
