--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,10 @@
   "plugins": [
     "transform-async-to-generator",
     "transform-decorators-legacy",
-    "transform-class-properties"
+    "transform-class-properties",
+    ["module-resolver", {
+      "cwd": ".",
+      "root": ["src"]
+    }]
   ]
 }
