--- a/package.json
+++ b/package.json
@@ -11,50 +11,68 @@
     "lint": "node_modules/.bin/eslint build src"
   },
   "devDependencies": {
-    "@octetstream/eslint-config": "2.0.2",
-    "@octetstream/invariant": "1.0.2",
-    "@octetstream/promisify": "1.0.3",
-    "apollo-client": "1.9.2",
-    "ava": "0.22.0",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-module-resolver": "2.7.1",
-    "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-preset-babili": "0.1.4",
-    "babel-preset-preact": "1.1.0",
+    "@babel/core": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-proposal-async-generator-functions": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-proposal-class-properties": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-proposal-decorators": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-proposal-export-default": ">=7.0.0-beta.32 <= 7.0.0",
+    "@babel/plugin-proposal-export-namespace": ">=7.0.0-beta.32 <= 7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-proposal-optional-catch-binding": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-proposal-optional-chaining": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-transform-async-to-generator": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-transform-modules-commonjs": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-transform-runtime": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/preset-react": "^7.0.0-beta.34",
+    "@babel/runtime": ">=7.0.0-beta.32 || <=7.0.0",
+    "@octetstream/eslint-config": "2.1.0",
+    "autoprefixer": "^7.2.2",
+    "ava": "0.24.0",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-module-resolver": "^3.0.0",
     "babili-webpack-plugin": "0.1.2",
     "css-loader": "0.28.7",
-    "eslint": "4.6.1",
-    "eslint-config-airbnb": "15.1.0",
-    "eslint-plugin-ava": "4.2.2",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.3.0",
-    "extract-text-webpack-plugin": "3.0.0",
+    "eslint": "4.13.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-import-resolver-babel-module": "^4.0.0-beta.3",
+    "eslint-plugin-ava": "4.4.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.5.1",
+    "extract-text-webpack-plugin": "3.0.2",
     "favicons-webpack-plugin": "0.0.7",
-    "graphql": "0.11.3",
-    "graphql-tag": "2.4.2",
     "html-webpack-harddisk-plugin": "0.1.0",
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
-    "jest": "21.0.2",
-    "lodash": "4.17.4",
-    "normalize.css": "7.0.0",
-    "object-path": "0.11.4",
-    "postcss": "6.0.11",
-    "postcss-loader": "2.0.6",
-    "preact": "8.2.5",
-    "preact-compat": "3.17.0",
-    "react-hot-loader": "1.3.1",
+    "normalize.css": "^7.0.0",
+    "postcss": "6.0.14",
+    "postcss-loader": "^2.0.9",
+    "react-hot-loader": "3.1.3",
     "react-router": "4.2.0",
-    "redux": "3.7.2",
-    "style-loader": "0.18.2",
-    "stylelint": "8.1.1",
-    "sugarss": "1.0.0",
-    "webpack": "3.5.6",
-    "webpack-dev-server": "2.7.1",
+    "style-loader": "0.19.0",
+    "stylelint": "8.3.1",
+    "sugarss": "1.0.1",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.9.7",
     "whatwg-fetch": "2.0.3"
+  },
+  "dependencies": {
+    "@octetstream/invariant": "1.1.0",
+    "@octetstream/object-to-form-data": "^0.1.1",
+    "@octetstream/promisify": "1.3.2",
+    "apollo-client": "^2.0.4",
+    "apollo-link": "^1.0.6",
+    "graphql": "0.11.7",
+    "graphql-tag": "2.6.0",
+    "lodash": "^4.17.4",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
+    "mobx-state-tree": "1.2.1",
+    "object-path": "0.11.4",
+    "preact": "8.2.6",
+    "preact-compat": "3.17.0",
+    "prop-types": "15.6.0",
+    "react-router-dom": "^4.2.2"
   }
 }
