--- a/package.json
+++ b/package.json
@@ -61,9 +61,10 @@
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "^0.1.1",
     "@octetstream/promisify": "1.3.2",
+    "apollo-cache-inmemory": "^1.1.4",
     "apollo-client": "^2.0.4",
     "apollo-link": "^1.0.6",
-    "graphql": "0.11.7",
+    "graphql": "^0.11.7",
     "graphql-tag": "2.6.0",
     "lodash": "^4.17.4",
     "mobx": "^3.4.1",
