--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
   "scripts": {
     "make": "NODE_ENV=production node_modules/.bin/webpack --config build",
     "watch": "NODE_ENV=development node_modules/.bin/webpack-dev-server --config build",
+    "babel:make": "node_modules/.bin/babel src -d .",
+    "babel:watch": "node_modules/.bin/babel src -w -d .",
     "m": "yarn make",
     "w": "yarn watch",
     "lint": "node_modules/.bin/eslint build src"
   },
+  "ava": {
+    "files": [
+      "test/**/*.js",
+      "!test/**/__hook__/**",
+      "!test/**/__helper__/**",
+      "!test/helper/**"
+    ]
+  },
   "devDependencies": {
+    "@babel/cli": ">=7.0.0-beta.32 || <=7.0.0",
     "@babel/core": ">=7.0.0-beta.32 || <=7.0.0",
     "@babel/plugin-proposal-async-generator-functions": ">=7.0.0-beta.32 || <=7.0.0",
     "@babel/plugin-proposal-class-properties": ">=7.0.0-beta.32 || <=7.0.0",
@@ -24,18 +35,19 @@
     "@babel/plugin-transform-async-to-generator": ">=7.0.0-beta.32 || <=7.0.0",
     "@babel/plugin-transform-modules-commonjs": ">=7.0.0-beta.32 || <=7.0.0",
     "@babel/plugin-transform-runtime": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/preset-react": "^7.0.0-beta.34",
+    "@babel/preset-react": ">=7.0.0-beta.32 || <=7.0.0",
     "@babel/runtime": ">=7.0.0-beta.32 || <=7.0.0",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "^7.2.2",
+    "autoprefixer": "7.2.2",
     "ava": "0.24.0",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-loader": "8.0.0-beta.0",
+    "babel-plugin-module-resolver": "3.0.0",
     "babili-webpack-plugin": "0.1.2",
     "css-loader": "0.28.7",
+    "enzyme": "3.2.0",
     "eslint": "4.13.0",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-import-resolver-babel-module": "^4.0.0-beta.3",
+    "eslint-import-resolver-babel-module": "4.0.0-beta.3",
     "eslint-plugin-ava": "4.4.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
@@ -45,11 +57,13 @@
     "html-webpack-harddisk-plugin": "0.1.0",
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
-    "normalize.css": "^7.0.0",
+    "lint-staged": "6.0.0",
+    "normalize.css": "7.0.0",
     "postcss": "6.0.14",
-    "postcss-loader": "^2.0.9",
+    "postcss-loader": "2.0.9",
     "react-hot-loader": "3.1.3",
     "react-router": "4.2.0",
+    "rimraf": "^2.6.2",
     "style-loader": "0.19.0",
     "stylelint": "8.3.1",
     "sugarss": "1.0.1",
@@ -59,21 +73,21 @@
   },
   "dependencies": {
     "@octetstream/invariant": "1.1.0",
-    "@octetstream/object-to-form-data": "^0.1.1",
+    "@octetstream/object-to-form-data": "0.1.1",
     "@octetstream/promisify": "1.3.2",
-    "apollo-cache-inmemory": "^1.1.4",
-    "apollo-client": "^2.0.4",
-    "apollo-link": "^1.0.6",
-    "graphql": "^0.11.7",
-    "graphql-tag": "2.6.0",
-    "lodash": "^4.17.4",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
+    "apollo-cache-inmemory": "1.1.4",
+    "apollo-client": "2.0.4",
+    "apollo-link": "1.0.6",
+    "graphql": "0.11.7",
+    "graphql-tag": "^2.6.0",
+    "lodash": "4.17.4",
+    "mobx": "3.4.1",
+    "mobx-react": "4.3.5",
     "mobx-state-tree": "1.2.1",
     "object-path": "0.11.4",
     "preact": "8.2.6",
     "preact-compat": "3.17.0",
     "prop-types": "15.6.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "4.2.2"
   }
 }
