--- a/package.json
+++ b/package.json
@@ -21,33 +21,34 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/core": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-proposal-async-generator-functions": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-proposal-class-properties": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-proposal-decorators": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/cli": "^7.0.0-beta.35",
+    "@babel/core": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.35",
     "@babel/plugin-proposal-export-default": ">=7.0.0-beta.32 <= 7.0.0",
     "@babel/plugin-proposal-export-namespace": ">=7.0.0-beta.32 <= 7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-proposal-optional-catch-binding": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-proposal-optional-chaining": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-transform-async-to-generator": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-transform-modules-commonjs": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/plugin-transform-runtime": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/preset-react": ">=7.0.0-beta.32 || <=7.0.0",
-    "@babel/runtime": ">=7.0.0-beta.32 || <=7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.35",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.35",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.35",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.35",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.35",
+    "@babel/preset-react": "^7.0.0-beta.35",
+    "@babel/runtime": "^7.0.0-beta.35",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "7.2.2",
+    "autoprefixer": "7.2.3",
     "ava": "0.24.0",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "3.0.0",
     "babili-webpack-plugin": "0.1.2",
     "css-loader": "0.28.7",
     "enzyme": "3.2.0",
-    "eslint": "4.13.0",
+    "eslint": "4.13.1",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-import-resolver-babel-module": "4.0.0-beta.3",
+    "eslint-import-resolver-babel-module": "4.0.0",
     "eslint-plugin-ava": "4.4.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
@@ -64,8 +65,8 @@
     "react-hot-loader": "3.1.3",
     "react-router": "4.2.0",
     "rimraf": "^2.6.2",
-    "style-loader": "0.19.0",
-    "stylelint": "8.3.1",
+    "style-loader": "0.19.1",
+    "stylelint": "8.4.0",
     "sugarss": "1.0.1",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.9.7",
@@ -78,14 +79,16 @@
     "apollo-cache-inmemory": "1.1.4",
     "apollo-client": "2.0.4",
     "apollo-link": "1.0.6",
-    "graphql": "0.11.7",
+    "classnames": "^2.2.5",
+    "graphql": "0.12.0",
     "graphql-tag": "^2.6.0",
     "lodash": "4.17.4",
     "mobx": "3.4.1",
     "mobx-react": "4.3.5",
     "mobx-state-tree": "1.2.1",
+    "nanoid": "^1.0.1",
     "object-path": "0.11.4",
-    "preact": "8.2.6",
+    "preact": "8.2.7",
     "preact-compat": "3.17.0",
     "prop-types": "15.6.0",
     "react-router-dom": "4.2.2"
