Fix routes collector

--- a/package.json
+++ b/package.json
@@ -21,37 +21,37 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.35",
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.35",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.35",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.35",
+    "@babel/cli": "^7.0.0-beta.36",
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.36",
     "@babel/plugin-proposal-export-default": ">=7.0.0-beta.32 <= 7.0.0",
     "@babel/plugin-proposal-export-namespace": ">=7.0.0-beta.32 <= 7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.35",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.35",
-    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0-beta.35",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.35",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.35",
-    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.35",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.35",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.35",
-    "@babel/preset-react": "^7.0.0-beta.35",
-    "@babel/runtime": "^7.0.0-beta.35",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.36",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.36",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.36",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.36",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.36",
+    "@babel/preset-react": "^7.0.0-beta.36",
+    "@babel/runtime": "^7.0.0-beta.36",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "7.2.3",
+    "autoprefixer": "7.2.4",
     "ava": "0.24.0",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "3.0.0",
     "babili-webpack-plugin": "0.1.2",
-    "css-loader": "0.28.7",
-    "enzyme": "3.2.0",
-    "eslint": "4.13.1",
+    "css-loader": "0.28.8",
+    "enzyme": "3.3.0",
+    "eslint": "4.14.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "4.0.0",
     "eslint-plugin-ava": "4.4.0",
     "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.5.1",
     "extract-text-webpack-plugin": "3.0.2",
     "favicons-webpack-plugin": "0.0.7",
@@ -60,8 +60,8 @@
     "husky": "0.14.3",
     "lint-staged": "6.0.0",
     "normalize.css": "7.0.0",
-    "postcss": "6.0.14",
-    "postcss-loader": "2.0.9",
+    "postcss": "6.0.15",
+    "postcss-loader": "2.0.10",
     "react-hot-loader": "3.1.3",
     "react-router": "4.2.0",
     "rimraf": "^2.6.2",
@@ -78,14 +78,14 @@
     "@octetstream/promisify": "1.3.2",
     "apollo-cache-inmemory": "1.1.4",
     "apollo-client": "2.0.4",
-    "apollo-link": "1.0.6",
+    "apollo-link": "1.0.7",
     "classnames": "^2.2.5",
-    "graphql": "0.12.0",
-    "graphql-tag": "^2.6.0",
+    "graphql": "0.12.3",
+    "graphql-tag": "^2.6.1",
     "lodash": "4.17.4",
-    "mobx": "3.4.1",
-    "mobx-react": "4.3.5",
-    "mobx-state-tree": "1.2.1",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
+    "mobx-state-tree": "1.3.1",
     "nanoid": "^1.0.1",
     "object-path": "0.11.4",
     "preact": "8.2.7",
