--- a/package.json
+++ b/package.json
@@ -59,18 +59,15 @@
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
     "lint-staged": "6.0.0",
-    "normalize.css": "7.0.0",
     "postcss": "6.0.15",
     "postcss-loader": "2.0.10",
     "react-hot-loader": "3.1.3",
-    "react-router": "4.2.0",
     "rimraf": "^2.6.2",
     "style-loader": "0.19.1",
     "stylelint": "8.4.0",
     "sugarss": "1.0.1",
     "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.7",
-    "whatwg-fetch": "2.0.3"
+    "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
     "@octetstream/invariant": "1.1.0",
@@ -87,10 +84,13 @@
     "mobx-react": "^4.3.5",
     "mobx-state-tree": "1.3.1",
     "nanoid": "^1.0.1",
+    "normalize.css": "7.0.0",
+    "react-router": "4.2.0",
     "object-path": "0.11.4",
     "preact": "8.2.7",
     "preact-compat": "3.17.0",
     "prop-types": "15.6.0",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "whatwg-fetch": "2.0.3"
   }
 }
