--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ node_modules
 coverage
 yarn-error.log
 
+/config/**/*.yaml
 /config/**/*.yml
-/config/**/default.yml
 
 /static/assets/js/**/*.js
 /static/assets/css/**/*.css
@@ -12,3 +12,6 @@ yarn-error.log
 /test
 /core
 /module
+
+!/config/**/default.yaml
+!/config/**/default.yml
