--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
     "lint-staged": "^6.0.0",
+    "lost": "^8.2.0",
     "postcss": "6.0.15",
     "postcss-autoreset": "^2.0.1",
     "postcss-cssnext": "^3.0.2",
@@ -75,7 +76,8 @@
     "stylelint-config-recommended": "^2.0.1",
     "sugarss": "1.0.1",
     "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.7"
+    "webpack-dev-server": "2.9.7",
+    "yaml-loader": "^0.5.0"
   },
   "dependencies": {
     "@octetstream/invariant": "1.1.0",
