--- a/package.json
+++ b/package.json
@@ -21,35 +21,35 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.36",
-    "@babel/core": "^7.0.0-beta.36",
-    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.36",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.36",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.36",
+    "@babel/cli": "^7.0.0-beta.38",
+    "@babel/core": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.38",
     "@babel/plugin-proposal-export-default": ">=7.0.0-beta.32 <= 7.0.0",
     "@babel/plugin-proposal-export-namespace": ">=7.0.0-beta.32 <= 7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.36",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.36",
-    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0-beta.36",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.36",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.36",
-    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.36",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.36",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.36",
-    "@babel/preset-env": "^7.0.0-beta.36",
-    "@babel/preset-react": "^7.0.0-beta.36",
-    "@babel/runtime": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.38",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.38",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.38",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.38",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.38",
+    "@babel/preset-env": "^7.0.0-beta.38",
+    "@babel/preset-react": "^7.0.0-beta.38",
+    "@babel/runtime": "^7.0.0-beta.38",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "7.2.4",
+    "autoprefixer": "7.2.5",
     "ava": "0.24.0",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "3.0.0",
     "babili-webpack-plugin": "0.1.2",
-    "css-loader": "0.28.8",
+    "css-loader": "0.28.9",
     "enzyme": "3.3.0",
-    "eslint": "4.14.0",
+    "eslint": "4.15.0",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-import-resolver-babel-module": "4.0.0",
+    "eslint-import-resolver-babel-module": "5.0.0-beta.0",
     "eslint-plugin-ava": "4.4.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
@@ -61,7 +61,7 @@
     "husky": "0.14.3",
     "lint-staged": "^6.0.0",
     "lost": "^8.2.0",
-    "postcss": "6.0.15",
+    "postcss": "6.0.16",
     "postcss-autoreset": "^2.0.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-flexbugs-fixes": "^3.2.0",
@@ -76,15 +76,15 @@
     "stylelint-config-recommended": "^2.0.1",
     "sugarss": "1.0.1",
     "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.7",
+    "webpack-dev-server": "2.11.0",
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "0.1.1",
     "@octetstream/promisify": "1.3.2",
-    "apollo-cache-inmemory": "1.1.4",
-    "apollo-client": "2.0.4",
+    "apollo-cache-inmemory": "1.1.5",
+    "apollo-client": "2.2.0",
     "apollo-link": "1.0.7",
     "classnames": "^2.2.5",
     "graphql": "0.12.3",
