--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,21 @@
 {
   "presets": [
-    ["@babel/preset-react", {
+    ["@babel/react", {
       "pragma": "h"
+    }],
+    ["@babel/env", {
+      "modules": false,
+      "targets": {
+        "browsers": ["last 2 versions"]
+      }
     }]
   ],
   "plugins": [
-    "@babel/transform-runtime",
     "@babel/syntax-dynamic-import",
-    "@babel/proposal-decorators",
+    "@babel/transform-runtime",
     "@babel/proposal-class-properties",
-    "@babel/proposal-async-generator-functions",
-    "@babel/proposal-nullish-coalescing-operator",
-    "@babel/proposal-optional-catch-binding",
-    "@babel/proposal-optional-chaining",
-    "@babel/proposal-export-namespace",
-    "@babel/proposal-export-default",
-    "@babel/transform-modules-commonjs",
-    "@babel/transform-async-to-generator",
     ["@babel/proposal-object-rest-spread", {
-      "useBuiltIns": true
+      "useBuiltIns": true,
     }],
     ["module-resolver", {
       "root": ["src"]
