--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel:watch": "node_modules/.bin/babel src -w -d .",
     "m": "yarn make",
     "w": "yarn watch",
+    "eslint": "node_modules/.bin/eslint src build",
     "staged": "node_modules/.bin/lint-staged",
     "precommit": "yarn staged"
   },
@@ -34,6 +35,7 @@
     "@octetstream/eslint-config": "2.1.0",
     "autoprefixer": "7.2.5",
     "ava": "0.24.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "3.0.0",
     "babili-webpack-plugin": "0.1.2",
@@ -69,6 +71,7 @@
     "sugarss": "1.0.1",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.11.0",
+    "webpack-jarvis": "^0.2.2",
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
