Improve connect helper. Rename AryncRoute => ViewLoader

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/cli": "^7.0.0-beta.38",
     "@babel/core": "^7.0.0-beta.38",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.38",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.38",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.38",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.38",
@@ -37,7 +38,7 @@
     "ava": "0.24.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-module-resolver": "3.0.0",
+    "babel-plugin-module-resolver": "^3.0.0",
     "babili-webpack-plugin": "0.1.2",
     "css-loader": "0.28.9",
     "enzyme": "3.3.0",
@@ -55,6 +56,8 @@
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
     "lost": "^8.2.0",
+    "mobx-preact": "^1.1.0",
+    "p-waterfall": "^1.0.0",
     "postcss": "6.0.16",
     "postcss-autoreset": "^2.0.1",
     "postcss-cssnext": "^3.0.2",
