Add a model for login with test schema and action. Rename: Signin => Login and update /auth/signin route to /auth/login. Enable import/no-unresolved rule in eslint config, because its finally works in Sublime Text 3 🎉

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-eslint": "^8.2.1",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
     "babili-webpack-plugin": "0.1.2",
     "css-loader": "0.28.9",
     "enzyme": "3.3.0",
