--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
     ["@babel/env", {
       "modules": false,
       "targets": {
-        "browsers": ["last 2 versions"]
+        "browsers": ["last 2 versions", "not ie 11"]
       }
     }]
   ],
@@ -21,5 +21,10 @@
     ["module-resolver", {
       "root": ["src"]
     }]
-  ]
+  ],
+  "env": {
+    "production": {
+      "plugins": ["transform-react-remove-prop-types"]
+    }
+  }
 }
