Fix Apollo Client config and fetcher. Remove Jarvis.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel:watch": "node_modules/.bin/babel src -w -d .",
     "m": "yarn make",
     "w": "yarn watch",
+    "stats": "node_modules/.bin/mkdirp runtime/webpack && node_modules/.bin/webpack --config build --profile --json > runtime/webpack/stats.json",
+    "cleanup": "node_modules/.bin/rimraf static/assets/js static/assets/css runtime",
     "eslint": "node_modules/.bin/eslint src build",
     "staged": "node_modules/.bin/lint-staged",
     "precommit": "yarn staged"
@@ -23,23 +25,23 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.38",
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.38",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.38",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.38",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.38",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
-    "@babel/preset-react": "^7.0.0-beta.38",
-    "@babel/runtime": "^7.0.0-beta.38",
+    "@babel/cli": "7.0.0-beta.38",
+    "@babel/core": "7.0.0-beta.38",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.38",
+    "@babel/plugin-proposal-decorators": "7.0.0-beta.38",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.38",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.38",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.38",
+    "@babel/preset-env": "7.0.0-beta.38",
+    "@babel/preset-react": "7.0.0-beta.38",
+    "@babel/runtime": "7.0.0-beta.38",
     "@octetstream/eslint-config": "2.1.0",
     "autoprefixer": "7.2.5",
     "ava": "0.24.0",
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "8.2.1",
     "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-module-resolver": "^3.0.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+    "babel-plugin-module-resolver": "3.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.12",
     "babili-webpack-plugin": "0.1.2",
     "css-loader": "0.28.9",
     "enzyme": "3.3.0",
@@ -52,31 +54,30 @@
     "eslint-plugin-react": "7.5.1",
     "extract-text-webpack-plugin": "3.0.2",
     "favicons-webpack-plugin": "0.0.7",
+    "graphql-tag": "2.6.1",
     "html-webpack-harddisk-plugin": "0.1.0",
     "html-webpack-plugin": "2.30.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^6.0.0",
-    "lost": "^8.2.0",
-    "mobx-preact": "^1.1.0",
-    "p-waterfall": "^1.0.0",
-    "postcss": "6.0.16",
-    "postcss-autoreset": "^2.0.1",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-flexbugs-fixes": "^3.2.0",
+    "husky": "0.14.3",
+    "lint-staged": "6.0.0",
+    "lost": "8.2.0",
+    "lost-grid": "5.1.6",
+    "mkdirp": "^0.5.1",
+    "postcss-autoreset": "2.0.1",
+    "postcss-cssnext": "3.0.2",
+    "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.10",
-    "postcss-nested": "^3.0.0",
-    "postcss-normalize": "^4.0.0",
-    "postcss-use": "^2.3.0",
+    "postcss-nested": "3.0.0",
+    "postcss-normalize": "4.0.0",
+    "postcss-use": "2.3.0",
     "react-hot-loader": "3.1.3",
-    "rimraf": "^2.6.2",
+    "rimraf": "2.6.2",
     "style-loader": "0.19.1",
-    "stylelint": "^8.4.0",
-    "stylelint-config-recommended": "^2.0.1",
+    "stylelint": "8.4.0",
+    "stylelint-config-recommended": "2.0.1",
     "sugarss": "1.0.1",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.11.0",
-    "webpack-jarvis": "^0.2.2",
-    "yaml-loader": "^0.5.0"
+    "yaml-loader": "0.5.0"
   },
   "dependencies": {
     "@octetstream/invariant": "1.1.0",
@@ -85,17 +86,17 @@
     "apollo-cache-inmemory": "1.1.5",
     "apollo-client": "2.2.0",
     "apollo-link": "1.0.7",
-    "classnames": "^2.2.5",
+    "classnames": "2.2.5",
     "graphql": "0.12.3",
-    "graphql-tag": "^2.6.1",
     "lodash": "4.17.4",
-    "lost-grid": "^5.1.6",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
+    "mobx": "3.4.1",
+    "mobx-preact": "1.1.0",
     "mobx-state-tree": "1.3.1",
-    "nanoid": "^1.0.1",
+    "nanoid": "1.0.1",
     "normalize.css": "7.0.0",
     "object-path": "0.11.4",
+    "p-waterfall": "1.0.0",
+    "postcss": "6.0.16",
     "preact": "8.2.7",
     "preact-compat": "3.17.0",
     "prop-types": "15.6.0",
