--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
   "build/**/*.{js,jsx}": "node_modules/.bin/eslint --fix",
-  "src/**/*.{js,jsx}": "node_modules/.bin/eslint --fix"
+  "src/**/*.{js,jsx}": "node_modules/.bin/eslint --fix",
+  "src/**/*.sss": "node_modules/.bin/stylelint --fix"
 }
