--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "w": "yarn watch",
     "stats": "node_modules/.bin/mkdirp runtime/webpack && node_modules/.bin/webpack --config build --profile --json > runtime/webpack/stats.json",
     "cleanup": "node_modules/.bin/rimraf static/assets/js static/assets/css runtime",
-    "eslint": "node_modules/.bin/eslint src build",
+    "lint:eslint": "node_modules/.bin/eslint src build",
+    "lint:stylelint": "node_modules/.bin/stylelint --fix",
     "staged": "node_modules/.bin/lint-staged",
     "precommit": "yarn staged"
   },
@@ -25,19 +26,19 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.38",
-    "@babel/core": "7.0.0-beta.38",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.38",
-    "@babel/plugin-proposal-decorators": "7.0.0-beta.38",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.38",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.38",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.38",
-    "@babel/preset-env": "7.0.0-beta.38",
+    "@babel/cli": "7.0.0-beta.39",
+    "@babel/core": "7.0.0-beta.39",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.39",
+    "@babel/plugin-proposal-decorators": "7.0.0-beta.39",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.39",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.39",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.39",
+    "@babel/preset-env": "7.0.0-beta.39",
     "@babel/preset-react": "7.0.0-beta.38",
-    "@babel/runtime": "7.0.0-beta.38",
+    "@babel/runtime": "7.0.0-beta.39",
     "@octetstream/eslint-config": "2.1.0",
     "autoprefixer": "7.2.5",
-    "ava": "0.24.0",
+    "ava": "0.25.0",
     "babel-eslint": "8.2.1",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "3.0.0",
@@ -45,46 +46,49 @@
     "babili-webpack-plugin": "0.1.2",
     "css-loader": "0.28.9",
     "enzyme": "3.3.0",
-    "eslint": "4.15.0",
+    "eslint": "4.16.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
-    "eslint-plugin-ava": "4.4.0",
+    "eslint-plugin-ava": "4.5.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.5.1",
+    "eslint-plugin-react": "7.6.1",
     "extract-text-webpack-plugin": "3.0.2",
     "favicons-webpack-plugin": "0.0.7",
     "graphql-tag": "2.6.1",
     "html-webpack-harddisk-plugin": "0.1.0",
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
-    "lint-staged": "6.0.0",
+    "lint-staged": "6.1.0",
+    "localforage": "1.5.6",
     "lost": "8.2.0",
     "lost-grid": "5.1.6",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "0.5.1",
     "postcss-autoreset": "2.0.1",
-    "postcss-cssnext": "3.0.2",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.10",
+    "postcss-cssnext": "3.1.0",
+    "postcss-flexbugs-fixes": "3.3.0",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.1.0",
     "postcss-nested": "3.0.0",
     "postcss-normalize": "4.0.0",
+    "postcss-simple-vars": "4.1.0",
     "postcss-use": "2.3.0",
     "react-hot-loader": "3.1.3",
     "rimraf": "2.6.2",
-    "style-loader": "0.19.1",
+    "style-loader": "0.20.1",
     "stylelint": "8.4.0",
     "stylelint-config-recommended": "2.0.1",
     "sugarss": "1.0.1",
     "webpack": "3.10.0",
-    "webpack-dev-server": "2.11.0",
+    "webpack-dev-server": "2.11.1",
     "yaml-loader": "0.5.0"
   },
   "dependencies": {
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "0.1.1",
     "@octetstream/promisify": "1.3.2",
-    "apollo-cache-inmemory": "1.1.5",
-    "apollo-client": "2.2.0",
+    "apollo-cache-inmemory": "1.1.7",
+    "apollo-client": "2.2.2",
     "apollo-link": "1.0.7",
     "classnames": "2.2.5",
     "graphql": "0.12.3",
@@ -96,9 +100,9 @@
     "normalize.css": "7.0.0",
     "object-path": "0.11.4",
     "p-waterfall": "1.0.0",
-    "postcss": "6.0.16",
+    "postcss": "6.0.17",
     "preact": "8.2.7",
-    "preact-compat": "3.17.0",
+    "preact-compat": "3.18.0",
     "prop-types": "15.6.0",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
