--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,35 @@
 {
-  "extends": "stylelint-config-recommended"
+  "extends": "stylelint-config-recommended",
+  "rules": {
+    "property-no-unknown": [
+      true, {
+        "ignoreProperties": [
+          "lost-align",
+          "lost-center",
+          "lost-column",
+          "lost-flex-container",
+          "lost-masonry-column",
+          "lost-masonry-wrap",
+          "lost-move",
+          "lost-offset",
+          "lost-row",
+          "lost-unit",
+          "lost-utility",
+          "lost-waffle"
+        ]
+      }
+    ],
+    "at-rule-no-unknown": [
+      true, {
+        "ignoreAtRules": [
+          "lost", "use"
+        ]
+      }
+    ],
+    "selector-pseudo-class-no-unknown": [
+      true, {
+        "ignorePseudoClasses": ["global"]
+      }
+    ]
+  }
 }
