--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-react": "7.0.0-beta.39",
     "@babel/runtime": "7.0.0-beta.39",
     "@octetstream/eslint-config": "2.1.0",
+    "apollo-link-context": "^1.0.5",
     "autoprefixer": "7.2.5",
     "ava": "0.25.0",
     "babel-eslint": "8.2.1",
@@ -84,11 +85,11 @@
   },
   "dependencies": {
     "@octetstream/invariant": "1.1.0",
-    "@octetstream/object-to-form-data": "0.1.1",
+    "@octetstream/object-to-form-data": "0.2.0",
     "@octetstream/promisify": "1.3.2",
     "apollo-cache-inmemory": "1.1.7",
-    "apollo-client": "2.2.2",
-    "apollo-link": "1.0.7",
+    "apollo-client": "2.2.3",
+    "apollo-link": "1.1.0",
     "classnames": "2.2.5",
     "graphql": "0.13.0",
     "lodash": "4.17.5",
