--- a/package.json
+++ b/package.json
@@ -65,9 +65,10 @@
     "lost": "8.2.0",
     "lost-grid": "5.1.6",
     "mkdirp": "0.5.1",
-    "postcss-autoreset": "2.0.1",
+    "postcss-autoreset": "^2.0.1",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "3.3.0",
+    "postcss-font-magician": "^2.1.0",
     "postcss-import": "11.0.0",
     "postcss-loader": "2.1.0",
     "postcss-nested": "3.0.0",
