--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "preact": "8.2.7",
     "preact-compat": "3.18.0",
     "prop-types": "15.6.0",
+    "react-container-dimensions": "^1.3.3",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "whatwg-fetch": "2.0.3"
