Update babel and its config. Tiny fix for prop-types declaration at auth form components.

--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
       "modules": false,
       "exclude": ["transform-regenerator"],
       "targets": {
-        "browsers": ["last 2 versions", "chrome > 54"]
+        "browsers": ["last 2 years"]
       }
     }]
   ],
