--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@babel/preset-react": "7.0.0-beta.40",
     "@babel/runtime": "7.0.0-beta.40",
     "@octetstream/eslint-config": "2.1.0",
-    "apollo-link-context": "^1.0.5",
+    "apollo-link-context": "1.0.5",
     "autoprefixer": "8.0.0",
     "ava": "0.25.0",
     "babel-eslint": "8.2.1",
@@ -65,17 +65,17 @@
     "lost": "8.2.0",
     "lost-grid": "5.1.6",
     "mkdirp": "0.5.1",
-    "postcss-autoreset": "^2.0.1",
+    "postcss-autoreset": "2.0.1",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "3.3.0",
-    "postcss-font-magician": "^2.1.0",
+    "postcss-font-magician": "2.1.0",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.0",
     "postcss-nested": "3.0.0",
     "postcss-normalize": "4.0.0",
     "postcss-simple-vars": "4.1.0",
     "postcss-use": "2.3.0",
-    "react-svg-loader": "^2.1.0",
+    "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
     "style-loader": "0.20.1",
     "stylelint": "8.4.0",
@@ -106,7 +106,7 @@
     "preact": "8.2.7",
     "preact-compat": "3.18.0",
     "prop-types": "15.6.0",
-    "react-container-dimensions": "^1.3.3",
+    "react-helmet": "5.2.0",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "whatwg-fetch": "2.0.3"
