--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ava": "0.25.0",
     "babel-eslint": "8.2.1",
     "babel-loader": "8.0.0-beta.0",
+    "babel-minify-webpack-plugin": "^0.3.0",
     "babel-plugin-module-resolver": "3.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
     "babili-webpack-plugin": "0.1.2",
@@ -77,22 +78,24 @@
     "stylelint": "8.4.0",
     "stylelint-config-recommended": "2.0.1",
     "sugarss": "1.0.1",
+    "svgo": "^1.0.4",
+    "svgo-loader": "^2.1.0",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1",
     "yaml-loader": "0.5.0"
   },
   "dependencies": {
-    "localforage": "1.5.6",
+    "@babel/runtime": "7.0.0-beta.40",
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "0.2.0",
     "@octetstream/promisify": "1.3.2",
-    "@babel/runtime": "7.0.0-beta.40",
     "apollo-cache-inmemory": "1.1.7",
     "apollo-client": "2.2.3",
     "apollo-link": "1.1.0",
     "apollo-link-context": "1.0.5",
     "classnames": "2.2.5",
     "graphql": "0.13.0",
+    "localforage": "1.5.6",
     "lodash": "4.17.5",
     "mobx": "3.5.1",
     "mobx-preact": "1.1.0",
