--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel:watch": "node_modules/.bin/babel src -w -d .",
     "m": "yarn make",
     "w": "yarn watch",
-    "stats": "node_modules/.bin/mkdirp runtime/webpack && node_modules/.bin/webpack --config build --profile --json > runtime/webpack/stats.json",
+    "stats": "node_modules/.bin/mkdirp runtime/webpack && NODE_ENV=production node_modules/.bin/webpack --config build --profile --json > runtime/webpack/stats.json",
     "cleanup": "node_modules/.bin/rimraf static/assets/js static/assets/css runtime",
     "lint:eslint": "node_modules/.bin/eslint src build",
     "lint:stylelint": "node_modules/.bin/stylelint --fix",
@@ -82,6 +82,7 @@
     "svgo-loader": "^2.1.0",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1",
+    "webpack-manifest-plugin": "^1.3.2",
     "yaml-loader": "0.5.0"
   },
   "dependencies": {
@@ -109,6 +110,7 @@
     "preact-compat": "3.18.0",
     "prop-types": "15.6.0",
     "react-helmet": "5.2.0",
+    "react-loadable": "^5.3.1",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "whatwg-fetch": "2.0.3"
