--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "ava": "0.25.0",
     "babel-eslint": "8.2.1",
     "babel-loader": "8.0.0-beta.0",
-    "babel-minify-webpack-plugin": "^0.3.0",
+    "babel-minify-webpack-plugin": "0.3.0",
     "babel-plugin-module-resolver": "3.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
     "babili-webpack-plugin": "0.1.2",
@@ -72,17 +72,17 @@
     "postcss-normalize": "4.0.0",
     "postcss-simple-vars": "4.1.0",
     "postcss-use": "2.3.0",
+    "preact-compat-enzyme": "^0.2.5",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
     "style-loader": "0.20.1",
     "stylelint": "8.4.0",
     "stylelint-config-recommended": "2.0.1",
     "sugarss": "1.0.1",
-    "svgo": "^1.0.4",
-    "svgo-loader": "^2.1.0",
+    "svgo": "1.0.4",
+    "svgo-loader": "2.1.0",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1",
-    "webpack-manifest-plugin": "^1.3.2",
     "yaml-loader": "0.5.0"
   },
   "dependencies": {
@@ -94,6 +94,7 @@
     "apollo-client": "2.2.3",
     "apollo-link": "1.1.0",
     "apollo-link-context": "1.0.5",
+    "apollo-link-error": "^1.0.7",
     "classnames": "2.2.5",
     "graphql": "0.13.0",
     "localforage": "1.5.6",
@@ -110,7 +111,7 @@
     "preact-compat": "3.18.0",
     "prop-types": "15.6.0",
     "react-helmet": "5.2.0",
-    "react-loadable": "^5.3.1",
+    "react-loadable": "5.3.1",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "whatwg-fetch": "2.0.3"
