--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@babel/core": "7.0.0-beta.40",
     "@babel/plugin-proposal-class-properties": "7.0.0-beta.40",
     "@babel/plugin-proposal-decorators": "7.0.0-beta.40",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-beta.40",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.40",
+    "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.40",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.40",
     "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.40",
     "@babel/plugin-transform-runtime": "7.0.0-beta.40",
     "@babel/preset-env": "7.0.0-beta.40",
@@ -38,48 +41,48 @@
     "@octetstream/eslint-config": "2.1.0",
     "autoprefixer": "8.0.0",
     "ava": "0.25.0",
-    "babel-eslint": "8.2.1",
+    "babel-eslint": "8.2.2",
     "babel-loader": "8.0.0-beta.0",
     "babel-minify-webpack-plugin": "0.3.0",
-    "babel-plugin-module-resolver": "3.0.0",
+    "babel-plugin-module-resolver": "3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
-    "babili-webpack-plugin": "0.1.2",
-    "css-loader": "0.28.9",
+    "caniuse-lite": "1.0.30000810",
+    "css-loader": "0.28.10",
     "enzyme": "3.3.0",
-    "eslint": "4.17.0",
+    "eslint": "4.18.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
-    "eslint-plugin-ava": "4.5.0",
-    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-ava": "4.5.1",
+    "eslint-plugin-import": "2.9.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.6.1",
+    "eslint-plugin-react": "7.7.0",
     "extract-text-webpack-plugin": "3.0.2",
     "favicons-webpack-plugin": "0.0.7",
-    "graphql-tag": "2.7.3",
+    "graphql-tag": "2.8.0",
     "html-webpack-harddisk-plugin": "0.1.0",
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
-    "lint-staged": "6.1.0",
+    "lint-staged": "7.0.0",
     "lost": "8.2.0",
     "mkdirp": "0.5.1",
-    "postcss-autoreset": "2.0.1",
+    "postcss-autoreset": "2.0.2",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-font-magician": "2.1.0",
     "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.0",
+    "postcss-loader": "2.1.1",
     "postcss-nested": "3.0.0",
     "postcss-normalize": "4.0.0",
     "postcss-simple-vars": "4.1.0",
-    "postcss-use": "2.3.0",
-    "preact-compat-enzyme": "^0.2.5",
+    "postcss-use": "3.0.0",
+    "preact-compat-enzyme": "0.2.5",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
-    "style-loader": "0.20.1",
-    "stylelint": "8.4.0",
-    "stylelint-config-recommended": "2.0.1",
+    "style-loader": "0.20.2",
+    "stylelint": "9.1.1",
+    "stylelint-config-recommended": "2.1.0",
     "sugarss": "1.0.1",
-    "svgo": "1.0.4",
+    "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1",
@@ -90,14 +93,14 @@
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "0.2.0",
     "@octetstream/promisify": "1.3.2",
-    "apollo-cache-inmemory": "1.1.7",
-    "apollo-client": "2.2.3",
-    "apollo-link": "1.1.0",
-    "apollo-link-context": "1.0.5",
-    "apollo-link-error": "^1.0.7",
+    "apollo-cache-inmemory": "1.1.9",
+    "apollo-client": "2.2.5",
+    "apollo-link": "1.2.1",
+    "apollo-link-context": "1.0.7",
+    "apollo-link-error": "1.0.7",
     "classnames": "2.2.5",
-    "graphql": "0.13.0",
-    "localforage": "1.5.6",
+    "graphql": "0.13.1",
+    "localforage": "1.5.7",
     "lodash": "4.17.5",
     "mobx": "3.5.1",
     "mobx-preact": "1.1.0",
@@ -106,7 +109,7 @@
     "normalize.css": "8.0.0",
     "object-path": "0.11.4",
     "p-waterfall": "1.0.0",
-    "postcss": "6.0.17",
+    "postcss": "6.0.19",
     "preact": "8.2.7",
     "preact-compat": "3.18.0",
     "prop-types": "15.6.0",
