--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.40",
-    "@octetstream/invariant": "1.1.0",
+    "@octetstream/invariant": "^1.1.0",
     "@octetstream/object-to-form-data": "0.2.0",
     "@octetstream/promisify": "1.3.2",
     "apollo-cache-inmemory": "1.1.9",
