--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "apollo-link-context": "1.0.7",
     "apollo-link-error": "1.0.7",
     "classnames": "2.2.5",
+    "date-fns": "^1.29.0",
     "graphql": "0.13.1",
     "localforage": "1.5.7",
     "lodash": "4.17.5",
