--- a/package.json
+++ b/package.json
@@ -39,31 +39,31 @@
     "@babel/preset-env": "7.0.0-beta.40",
     "@babel/preset-react": "7.0.0-beta.40",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "8.0.0",
+    "autoprefixer": "8.1.0",
     "ava": "0.25.0",
     "babel-eslint": "8.2.2",
     "babel-loader": "8.0.0-beta.0",
     "babel-minify-webpack-plugin": "0.3.0",
     "babel-plugin-module-resolver": "3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
-    "caniuse-lite": "1.0.30000810",
+    "caniuse-lite": "1.0.30000813",
     "css-loader": "0.28.10",
     "enzyme": "3.3.0",
-    "eslint": "4.18.1",
+    "eslint": "4.18.2",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
     "eslint-plugin-ava": "4.5.1",
     "eslint-plugin-import": "2.9.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "favicons-webpack-plugin": "0.0.7",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "graphql-tag": "2.8.0",
-    "html-webpack-harddisk-plugin": "0.1.0",
-    "html-webpack-plugin": "2.30.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-harddisk-plugin": "^0.2.0",
+    "html-webpack-plugin": "3.0.6",
     "husky": "0.14.3",
     "lint-staged": "7.0.0",
-    "lost": "8.2.0",
+    "lost": "8.2.1",
     "mkdirp": "0.5.1",
     "postcss-autoreset": "2.0.2",
     "postcss-cssnext": "3.1.0",
@@ -84,26 +84,27 @@
     "sugarss": "1.0.1",
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1",
+    "webpack": "4.1.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "3.1.0",
     "yaml-loader": "0.5.0"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.40",
     "@octetstream/invariant": "^1.1.0",
-    "@octetstream/object-to-form-data": "0.2.0",
+    "@octetstream/object-to-form-data": "0.3.1",
     "@octetstream/promisify": "1.3.2",
-    "apollo-cache-inmemory": "1.1.9",
-    "apollo-client": "2.2.5",
+    "apollo-cache-inmemory": "1.1.10",
+    "apollo-client": "2.2.6",
     "apollo-link": "1.2.1",
     "apollo-link-context": "1.0.7",
     "apollo-link-error": "1.0.7",
     "classnames": "2.2.5",
     "date-fns": "^1.29.0",
     "graphql": "0.13.1",
-    "localforage": "1.5.7",
+    "localforage": "1.6.0",
     "lodash": "4.17.5",
-    "mobx": "3.5.1",
+    "mobx": "3.6.1",
     "mobx-preact": "1.1.0",
     "mobx-state-tree": "1.3.1",
     "nanoid": "1.0.2",
@@ -113,7 +114,7 @@
     "postcss": "6.0.19",
     "preact": "8.2.7",
     "preact-compat": "3.18.0",
-    "prop-types": "15.6.0",
+    "prop-types": "15.6.1",
     "react-helmet": "5.2.0",
     "react-loadable": "5.3.1",
     "react-router": "4.2.0",
