--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "html-webpack-harddisk-plugin": "^0.2.0",
     "html-webpack-plugin": "3.0.6",
     "husky": "0.14.3",
+    "js-yaml": "^3.11.0",
     "lint-staged": "7.0.0",
     "lost": "8.2.1",
     "mkdirp": "0.5.1",
@@ -86,8 +87,7 @@
     "svgo-loader": "2.1.0",
     "webpack": "4.1.1",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "3.1.0",
-    "yaml-loader": "0.5.0"
+    "webpack-dev-server": "3.1.0"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.40",
