--- a/package.json
+++ b/package.json
@@ -58,14 +58,14 @@
     "eslint-plugin-react": "7.7.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "graphql-tag": "2.8.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-harddisk-plugin": "^0.2.0",
+    "html-webpack-harddisk-plugin": "0.2.0",
     "html-webpack-plugin": "3.0.6",
     "husky": "0.14.3",
-    "js-yaml": "^3.11.0",
+    "js-yaml": "3.11.0",
     "lint-staged": "7.0.0",
     "lost": "8.2.1",
     "mkdirp": "0.5.1",
+    "postcss": "6.0.19",
     "postcss-autoreset": "2.0.2",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "3.3.0",
@@ -86,12 +86,12 @@
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
     "webpack": "4.1.1",
-    "webpack-cli": "^2.0.10",
+    "webpack-cli": "2.0.10",
     "webpack-dev-server": "3.1.0"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.40",
-    "@octetstream/invariant": "^1.1.0",
+    "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "0.3.1",
     "@octetstream/promisify": "1.3.2",
     "apollo-cache-inmemory": "1.1.10",
@@ -100,7 +100,7 @@
     "apollo-link-context": "1.0.7",
     "apollo-link-error": "1.0.7",
     "classnames": "2.2.5",
-    "date-fns": "^1.29.0",
+    "date-fns": "1.29.0",
     "graphql": "0.13.1",
     "localforage": "1.6.0",
     "lodash": "4.17.5",
@@ -111,7 +111,6 @@
     "normalize.css": "8.0.0",
     "object-path": "0.11.4",
     "p-waterfall": "1.0.0",
-    "postcss": "6.0.19",
     "preact": "8.2.7",
     "preact-compat": "3.18.0",
     "prop-types": "15.6.1",
