--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,7 @@
     "@babel/proposal-decorators",
     "@babel/proposal-class-properties",
     "@babel/proposal-optional-catch-binding",
+    "@babel/proposal-do-expressions",
     "@babel/proposal-nullish-coalescing-operator",
     "@babel/proposal-optional-chaining",
     ["@babel/proposal-object-rest-spread", {
