--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.40",
-    "@babel/core": "7.0.0-beta.40",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.40",
-    "@babel/plugin-proposal-decorators": "7.0.0-beta.40",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-beta.40",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.40",
-    "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.40",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.40",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.40",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.40",
-    "@babel/preset-env": "7.0.0-beta.40",
-    "@babel/preset-react": "7.0.0-beta.40",
+    "@babel/cli": "7.0.0-beta.42",
+    "@babel/core": "7.0.0-beta.42",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.42",
+    "@babel/plugin-proposal-decorators": "7.0.0-beta.42",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.42",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-beta.42",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.42",
+    "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.42",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.42",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.42",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.42",
+    "@babel/preset-env": "7.0.0-beta.42",
+    "@babel/preset-react": "7.0.0-beta.42",
     "@octetstream/eslint-config": "2.1.0",
     "autoprefixer": "8.1.0",
     "ava": "0.25.0",
@@ -46,7 +47,7 @@
     "babel-minify-webpack-plugin": "0.3.0",
     "babel-plugin-module-resolver": "3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
-    "caniuse-lite": "1.0.30000813",
+    "caniuse-lite": "1.0.30000815",
     "css-loader": "0.28.10",
     "enzyme": "3.3.0",
     "eslint": "4.18.2",
@@ -79,23 +80,23 @@
     "preact-compat-enzyme": "0.2.5",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
-    "style-loader": "0.20.2",
-    "stylelint": "9.1.1",
+    "style-loader": "0.20.3",
+    "stylelint": "9.1.3",
     "stylelint-config-recommended": "2.1.0",
     "sugarss": "1.0.1",
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
     "webpack": "4.1.1",
-    "webpack-cli": "2.0.10",
-    "webpack-dev-server": "3.1.0"
+    "webpack-cli": "2.0.12",
+    "webpack-dev-server": "3.1.1"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.40",
+    "@babel/runtime": "7.0.0-beta.42",
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "0.3.1",
     "@octetstream/promisify": "1.3.2",
-    "apollo-cache-inmemory": "1.1.10",
-    "apollo-client": "2.2.6",
+    "apollo-cache-inmemory": "1.1.11",
+    "apollo-client": "2.2.7",
     "apollo-link": "1.2.1",
     "apollo-link-context": "1.0.7",
     "apollo-link-error": "1.0.7",
@@ -105,9 +106,9 @@
     "graphql": "0.13.1",
     "localforage": "1.6.0",
     "lodash": "4.17.5",
-    "mobx": "3.6.1",
-    "mobx-preact": "1.1.0",
-    "mobx-state-tree": "1.3.1",
+    "mobx": "4.1.0",
+    "mobx-preact": "2.0.0",
+    "mobx-state-tree": "2.0.1",
     "nanoid": "1.0.2",
     "normalize.css": "8.0.0",
     "object-path": "0.11.4",
