--- a/package.json
+++ b/package.json
@@ -40,17 +40,17 @@
     "@babel/preset-env": "7.0.0-beta.42",
     "@babel/preset-react": "7.0.0-beta.42",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "8.1.0",
+    "autoprefixer": "8.2.0",
     "ava": "0.25.0",
     "babel-eslint": "8.2.2",
     "babel-loader": "8.0.0-beta.0",
-    "babel-minify-webpack-plugin": "0.3.0",
+    "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-module-resolver": "3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
-    "caniuse-lite": "1.0.30000815",
-    "css-loader": "0.28.10",
+    "caniuse-lite": "1.0.30000819",
+    "css-loader": "0.28.11",
     "enzyme": "3.3.0",
-    "eslint": "4.18.2",
+    "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
     "eslint-plugin-ava": "4.5.1",
@@ -60,19 +60,19 @@
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "graphql-tag": "2.8.0",
     "html-webpack-harddisk-plugin": "0.2.0",
-    "html-webpack-plugin": "3.0.6",
+    "html-webpack-plugin": "3.1.0",
     "husky": "0.14.3",
     "js-yaml": "3.11.0",
     "lint-staged": "7.0.0",
     "lost": "8.2.1",
     "mkdirp": "0.5.1",
-    "postcss": "6.0.19",
+    "postcss": "6.0.21",
     "postcss-autoreset": "2.0.2",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-font-magician": "2.1.0",
     "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.1",
+    "postcss-loader": "2.1.3",
     "postcss-nested": "3.0.0",
     "postcss-normalize": "4.0.0",
     "postcss-simple-vars": "4.1.0",
@@ -86,15 +86,15 @@
     "sugarss": "1.0.1",
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
-    "webpack": "4.1.1",
-    "webpack-cli": "2.0.12",
+    "webpack": "4.2.0",
+    "webpack-cli": "2.0.13",
     "webpack-dev-server": "3.1.1"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.42",
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "0.3.1",
-    "@octetstream/promisify": "1.3.2",
+    "@octetstream/promisify": "1.3.3",
     "apollo-cache-inmemory": "1.1.11",
     "apollo-client": "2.2.7",
     "apollo-link": "1.2.1",
@@ -102,14 +102,14 @@
     "apollo-link-error": "1.0.7",
     "awaity": "^0.0.30",
     "classnames": "2.2.5",
-    "date-fns": "1.29.0",
-    "graphql": "0.13.1",
+    "date-fns": "2.0.0-alpha.7",
+    "graphql": "0.13.2",
     "localforage": "1.6.0",
     "lodash": "4.17.5",
-    "lodash-decorators": "^4.5.0",
+    "lodash-decorators": "^5.0.0",
     "mobx": "4.1.0",
     "mobx-preact": "2.0.0",
-    "mobx-state-tree": "2.0.1",
+    "mobx-state-tree": "2.0.2",
     "nanoid": "1.0.2",
     "normalize.css": "8.0.0",
     "object-path": "0.11.4",
