--- a/.babelrc
+++ b/.babelrc
@@ -19,6 +19,7 @@
     "@babel/proposal-optional-catch-binding",
     "@babel/proposal-do-expressions",
     "@babel/proposal-nullish-coalescing-operator",
+    "@babel/proposal-pipeline-operator",
     "@babel/proposal-optional-chaining",
     ["@babel/proposal-object-rest-spread", {
       "useBuiltIns": true,
