--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.44",
     "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.44",
     "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.44",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.44",
     "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.44",
     "@babel/plugin-transform-runtime": "7.0.0-beta.44",
     "@babel/preset-env": "7.0.0-beta.44",
@@ -109,6 +110,7 @@
     "lodash-decorators": "5.0.0",
     "mobx-preact": "2.0.0",
     "mobx-state-tree": "2.0.3",
+    "ms": "^2.1.1",
     "nanoid": "1.0.2",
     "normalize.css": "8.0.0",
     "object-path": "0.11.4",
