Add custom implementation of loadable components.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
   "rules": {
     "react/no-unknown-property": [2, {
       "ignore": ["class"]
-    }]
+    }],
+
+    "no-unused-expressions": 0
   }
 }
