--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.44",
     "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.44",
     "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.44",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-pipeline-operator": "7.0.0-beta.44",
     "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.44",
     "@babel/plugin-transform-runtime": "7.0.0-beta.44",
     "@babel/preset-env": "7.0.0-beta.44",
@@ -105,23 +105,25 @@
     "classnames": "2.2.5",
     "date-fns": "2.0.0-alpha.7",
     "graphql": "0.13.2",
-    "halogen": "^0.2.0",
+    "halogen": "0.2.0",
     "localforage": "1.7.1",
     "lodash": "4.17.5",
     "lodash-decorators": "5.0.0",
-    "mobx": "^4.2.0",
+    "mobx": "4.2.0",
     "mobx-preact": "2.0.0",
     "mobx-state-tree": "2.0.4",
-    "ms": "^2.1.1",
+    "ms": "2.1.1",
     "nanoid": "1.0.2",
     "normalize.css": "8.0.0",
+    "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
+    "p-reduce": "1.0.0",
     "p-waterfall": "1.0.0",
     "preact": "8.2.7",
     "preact-compat": "3.18.0",
     "prop-types": "15.6.1",
     "react-helmet": "5.2.0",
-    "react-lazy-images": "^0.9.0",
+    "react-lazy-images": "0.9.0",
     "react-loadable": "5.3.1",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
