--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "js-yaml": "3.11.0",
-    "lint-staged": "7.0.4",
+    "lint-staged": "^7.0.5",
     "lost": "8.2.1",
     "mini-css-extract-plugin": "^0.4.0",
     "mkdirp": "0.5.1",
@@ -108,6 +108,7 @@
     "awaity": "1.0.0",
     "classnames": "2.2.5",
     "date-fns": "2.0.0-alpha.7",
+    "draft-js": "^0.10.5",
     "graphql": "0.13.2",
     "halogen": "0.2.0",
     "localforage": "1.7.1",
@@ -125,6 +126,7 @@
     "p-waterfall": "1.0.0",
     "preact": "8.2.7",
     "preact-compat": "3.18.0",
+    "preact-slots": "^1.0.0",
     "prop-types": "15.6.1",
     "react-helmet": "5.2.0",
     "react-lazy-images": "0.9.0",
