--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
     "caniuse-lite": "1.0.30000865",
     "css-loader": "1.0.0",
-    "enzyme": "3.3.0",
+    "enzyme": "^3.3.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
@@ -78,7 +78,6 @@
     "postcss-preset-env": "5.2.3",
     "postcss-simple-vars": "4.1.0",
     "postcss-use": "3.0.0",
-    "preact-compat-enzyme": "0.2.5",
     "react-hot-loader": "^4.3.4",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
